--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2229,6 +2229,7 @@ input, select, textarea {
 
 	form {
 		margin: 0 0 2em 0;
+
 	}
 
 		form.cta {
@@ -2243,6 +2244,8 @@ input, select, textarea {
 		font-size: 0.9em;
 		font-weight: 700;
 		margin: 0 0 1em 0;
+		border: 2px solid red;
+
 	}
 
 	input[type="text"],
@@ -2260,12 +2263,12 @@ input, select, textarea {
 		transition: border-color 0.2s ease-in-out;
 		background: transparent;
 		border-radius: 4px;
-		border: solid 1px rgba(255, 255, 255, 0.3);
+		border: solid 2px rgba(255, 255, 255, 0.5);
 		color: inherit;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
-		text-decoration: none;
+		font-weight: 500;
 		width: 100%;
 	}
 
